scrollbars & fixes

--- a/client/style.css
+++ b/client/style.css
@@ -245,8 +245,6 @@ a:hover {
     color: crimson;
 }
 
-
-
 form {
     display: flex;
     flex-direction: row;
@@ -267,9 +265,10 @@ form span {
         -1px -1px 0 black;
 }
 
-form option {  font-size: 1vmax;
-    color: red;}
-
+form option {
+    font-size: 1vmax;
+    color: red;
+}
 
 .editMapToggler {
     font-size: 1.5vmax;
@@ -466,8 +465,6 @@ button:active {
     align-self: center;
     font-family: "Black Ops One", cursive;
 }
-
-
 
 @keyframes blinker {
     5% {
@@ -726,7 +723,6 @@ button:active {
         flex-direction: column-reverse !important;
     }
 
-
     .detailedEntry span {
         font-size: 3vmax !important;
     }
@@ -833,7 +829,7 @@ button:active {
     }
 
     .next {
-        margin-right: 1vh !important
+        margin-right: 1vh !important;
     }
 
     .onlineUsers {
@@ -1025,6 +1021,24 @@ button:active {
     width: 0;
 }
 
+.chatScreen::-webkit-scrollbar {
+    width: 20px;
+}
+
+.chatScreen::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px rgb(136, 135, 135);
+    border-radius: 10px;
+}
+
+.chatScreen::-webkit-scrollbar-thumb {
+    background: #96ff592a;
+    border-radius: 10px;
+}
+
+.chatScreen::-webkit-scrollbar-thumb:hover {
+    background: #ffc4015b;
+}
+
 .selectGig {
     background-color: rgba(0, 0, 0, 0.144);
     border-radius: 100px;
@@ -1048,7 +1062,6 @@ button:active {
     padding: 0.5vmax;
     width: 40vw;
 }
-
 
 .pin {
     width: 40px;
@@ -1422,12 +1435,9 @@ font-family: 'Ultra', serif; */
     font-size: 1.2vmax;
 }
 
-.finalMessage {
-    display: flex;
-    justify-content: flex-start;
-}
-
 .emojis {
+    position: relative;
+    left: 45%;
     height: 6vmax !important;
     width: 6vmax !important;
     margin: 1vmax;
@@ -2078,17 +2088,15 @@ font-family: 'Ultra', serif; */
     font-size: 3vmax;
 }
 
-
 .gigEntryContainer form {
     margin: 0;
 }
-
 
 .gigEntryContainer form select {
     width: 17vw;
 }
 .gigEntryContainer form option {
-    color:black
+    color: black;
 }
 
 .gigEntryDetails img {
@@ -2096,7 +2104,7 @@ font-family: 'Ultra', serif; */
     height: 30vmax;
     box-shadow: -0 0 10px rgba(0, 0, 0, 0.281), 0 -0 10px rgba(0, 0, 0, 0.281),
         -0 -0 10px rgba(0, 0, 0, 0.281), -0 -0 10px rgba(0, 0, 0, 0.281);
-    margin:5vh;
+    margin: 5vh;
 }
 
 .detailedEntry {
@@ -2104,25 +2112,21 @@ font-family: 'Ultra', serif; */
     text-align: center;
 }
 
-
 .detailedEntry h1 {
-
     font-size: 1.5vmax;
-   border-bottom: 1px solid purple;
-  padding-bottom:5vh;
-  height: fit-content;
+    border-bottom: 1px solid purple;
+    padding-bottom: 5vh;
+    height: fit-content;
 }
-
 
 .detailedEntry h1:nth-child(8) {
     border-bottom: none;
-    padding-bottom:0;
+    padding-bottom: 0;
 }
 
 .detailedEntry span {
     color: lime;
     font-size: 2.5vmax;
-
 }
 
 .gigEntryDetails {
